--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,11 @@
   </head>
   <body>
     <div id="container"></div>
-    <script src="/dist/main.js?3adf846dfaf068cfab89"></script>
+    <script src="/dist/main.52058f912aba169e559e.js"></script>
+    <script>
+      window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
+      ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
   </body>
 </html>
